--- a/Web/BeStudent.Web/Views/Shared/_Layout.cshtml
+++ b/Web/BeStudent.Web/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Courses" asp-action="All">Courses</a>
                             </li>
                         }
-                        else
+                        else if (this.User.IsInRole("Lector") || this.User.IsInRole("User"))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Subjects" asp-action="All">Subjects</a>
