--- a/Web/BeStudent.Web/Views/Subjects/Themes.cshtml
+++ b/Web/BeStudent.Web/Views/Subjects/Themes.cshtml
@@ -30,6 +30,11 @@
                 Exams
             </button>
         </li>
+        <li class="list-group-item">
+            <a asp-controller="Subjects" asp-action="Calendar" asp-route-subjectName="@Model.Name" class="btn btn-link text-center">
+                Calendar
+            </a>
+        </li>
     </ul>
 
     <div id="Partials" class="d-none p-2 flex-grow-1 w-100 flex-fill bd-highlight">
