Finishing calendar implementation

--- a/Web/BeStudent.Web/Views/Homeworks/All.cshtml
+++ b/Web/BeStudent.Web/Views/Homeworks/All.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     this.ViewData["Title"] = "Homeworks";
-    var subjectName = @Context.Request.Query["subjectName"];
+    var subjectName = Context.Request.Query["subjectName"];
 }
 
 <div class="container">
