--- a/Web/BeStudent.Web/wwwroot/css/calendar.css
+++ b/Web/BeStudent.Web/wwwroot/css/calendar.css
@@ -64,16 +64,13 @@ Calendar Styling */
         margin-bottom: 1px;
     }
 
-        .calendar .days li .event.span-2 {
-            width: 200%;
-        }
-
         .calendar .days li .event.begin {
             border-radius: 1rem 0 0 1rem;
         }
 
         .calendar .days li .event.end {
             border-radius: 0 1rem 1rem 0;
+            height: 1.95rem;
         }
 
         .calendar .days li .event.clear {
