--- a/Web/BeStudent.Web/wwwroot/css/site.css
+++ b/Web/BeStudent.Web/wwwroot/css/site.css
@@ -55,3 +55,12 @@ body {
     height: 60px;
     line-height: 60px; /* Vertically center the text there */
 }
+
+.content {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
