--- a/Web/BeStudent.Web/Views/Exams/All.cshtml
+++ b/Web/BeStudent.Web/Views/Exams/All.cshtml
@@ -26,7 +26,7 @@
                 </a>
                 foreach (var test in exam.OnlineTests)
                 {
-                    <a class="btn btn-primary ml-5 w-25" asp-controller="Exams" asp-action="StartTest" asp-route-onlineTestId="@test.Id">
+                    <a class="btn btn-primary mb-2 ml-5 w-25" asp-controller="Exams" asp-action="StartTest" asp-route-onlineTestId="@test.Id">
                         Start Test
                     </a>
                 }
