--- a/Web/BeStudent.Web/Views/Exams/CreateQuestion.cshtml
+++ b/Web/BeStudent.Web/Views/Exams/CreateQuestion.cshtml
@@ -6,7 +6,7 @@
 <div class="container">
     <h1 class="mb-2 text-center">@this.ViewData["Title"]</h1>
 
-    <form method="post" asp-action="CreateQuestion">
+    <form method="post" asp-action="CreateQuestion" enctype="multipart/form-data">
         <div class="form-group">
             <label asp-for="Condition"></label>
             <input asp-for="Condition" class="form-control" />
