--- a/Web/BeStudent.Web/Views/Exams/FinishTest.cshtml
+++ b/Web/BeStudent.Web/Views/Exams/FinishTest.cshtml
@@ -7,8 +7,17 @@
     <div class="text-center">
         <h2 class="display-4">@this.ViewData["Title"]</h2>
         <br />
-        <p>Earn points: @Model.Points/@Model.MaxPoints</p>
-        <p>Grade: @Model.Mark</p>
+        @if (Model.Mark == null)
+        {
+            <p>For now earn points are @Model.Points/@Model.MaxPoints.</p>
+            <p>Grade: Waiting a lector to check your answers with open field and set your grade.</p>
+        }
+        else
+        {
+            <p>Earn points: @Model.Points/@Model.MaxPoints</p>
+            <p>Grade: @Model.Mark</p>
+        }
+
         @*<p>Duration: @Model.Send</p>
         <p>Questions: @Model.EndTime</p>*@
         <a class="btn btn-primary ml-5 w-25" asp-controller="Exams" asp-action="ReviewTest" asp-route-onlineTestId="@Model.Id" asp-route-studentId="@Model.StudentId">
