--- a/Web/BeStudent.Web/Views/Exams/ReviewTest.cshtml
+++ b/Web/BeStudent.Web/Views/Exams/ReviewTest.cshtml
@@ -1,15 +1,19 @@
 ﻿@model BeStudent.Web.ViewModels.Exam.OnlineTestReviewViewModel
 @{
     this.ViewData["Title"] = "Review";
+    var counter = 1;
 }
 
 <div class="container">
     <div class="text-center">
         <h2 class="display-4">@this.ViewData["Title"]</h2>
+        <h5>@($"{Model.Student.FirstName} {Model.Student.LastName}")</h5>
+        <h5>@($"{Model.Student.Email}")</h5>
+        <br />
     </div>
     @foreach (var question in Model.Questions)
     {
-        var decision = question.Decisions.FirstOrDefault(d => d.StudentId == Model.StudentId);
+        var decision = question.Decisions.FirstOrDefault(d => d.StudentId == Model.Student.Id);
         var color = "secondary";
         if (decision.Type == "RadioButtons")
         {
@@ -19,7 +23,10 @@
 
         <div class="card mb-3">
             <div class="card-body text-white bg-@color">
-                <h5 class="card-title">@question.Condition</h5>
+                <h5 class="card-title">@($"Question {counter}: {question.Condition}")</h5>
+                @{
+                    counter++;
+                }
                 @if (question.File != null)
                 {
                     <img src="@question.File.CloudinaryFileUri" alt="@question.File.FileDescription" style="width:500px;height:200px;">
@@ -67,7 +74,7 @@
                 }
                 else
                 {
-                    <p>@decision.SanitizedContent</p>
+                    <p>@Html.Raw(decision.SanitizedContent)</p>
                 }
             </div>
         </div>
