--- a/Web/BeStudent.Web/Views/Exams/StartTest.cshtml
+++ b/Web/BeStudent.Web/Views/Exams/StartTest.cshtml
@@ -6,6 +6,15 @@
 <div class="container">
     <div class="text-center">
         <h2 class="display-4">@this.ViewData["Title"]</h2>
+        @if (this.TempData["message"] != null)
+        {
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                @this.TempData["message"]
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        }
         <br />
         <p>Open: @Model.StartTime</p>
         <p>Close: @Model.EndTime</p>
