--- a/Web/BeStudent.Web/Views/Subjects/Themes.cshtml
+++ b/Web/BeStudent.Web/Views/Subjects/Themes.cshtml
@@ -13,6 +13,15 @@
             <h4>@($"{lector.Student.FirstName} {lector.Student.LastName}   {lector.Student.Email}")</h4>
         }
     </div>
+    @if (this.TempData["message"] != null)
+    {
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            @this.TempData["message"]
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    }
 
     <div class="d-flex">
         <ul class="list-group list-group-horizontal list-inline mx-auto justify-content-center">
