--- a/Web/BeStudent.Web/Views/Exams/All.cshtml
+++ b/Web/BeStudent.Web/Views/Exams/All.cshtml
@@ -6,6 +6,15 @@
 <div class="container">
     <div class="text-center">
         <h1 class="display-4">@this.ViewData["Title"]</h1>
+        @if (this.TempData["message"] != null)
+        {
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                @this.TempData["message"]
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        }
     </div>
 
     <ul class="list-group list-group-flush mt-3">
@@ -30,6 +39,19 @@
                         Start Test
                     </a>
                 }
+            }
+            else if (exam.Type == "OnlineExam")
+            {
+                <div class="text-center">
+                    <p>Open: @exam.Open</p>
+                    <p>Close: @exam.Close</p>
+                    <a class="btn btn-secondary m-1 w-auto" asp-controller="Exams" asp-action="SendSolution" asp-route-subjectName="@subjectName" asp-route-examId="@exam.Id">
+                        Send Solution
+                    </a>
+                    <a class="btn btn-secondary m-1 w-auto" asp-controller="Exams" asp-action="SendedSolutions" asp-route-subjectName="@subjectName" asp-route-examId="@exam.Id">
+                        Sended Homeworks
+                    </a>
+                </div>
             }
         }
     </ul>
